# pretty-uuid

./: Cargo.toml
proto/: store.proto
src/: main.rs  prefix_mappings.rs  prefix_mappings.yaml  server.rs  store.rs
